Fix styling causing overflow on body. (Had grid componentheight set larger than body height)

--- a/input.scss
+++ b/input.scss
@@ -5,7 +5,7 @@
 }
 
 body {
-  height: 100vh;
+  // height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,13 +15,10 @@ body {
 
 .grid-column-component {
   width: 80%;
-  max-width: 820px;
+  max-width: 1060px;
+  // height: 60vh;
+  // max-height: 50%;
   display: flex;
-  //   flex-wrap: wrap;
-  //   flex: 1 0 auto;
-  //   flex-direction: column;
-  //   grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-  height: 60vh;
   border-radius: 100px;
 }
 
@@ -29,7 +26,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  padding: 1.5rem;
+  padding: 3rem;
   background-color: hsl(31, 77%, 52%);
 }
 
@@ -48,7 +45,9 @@ body {
 }
 
 .section-text {
-  //   max-width: 50%;
+  display: flex;
+  align-items: center;
+
   font-family: "Lexend Deca", sans-serif;
   font-weight: 300;
   color: hsla(0, 0%, 100%, 0.75);
@@ -64,16 +63,52 @@ body {
 }
 
 a {
+  margin-top: 2rem;
   text-decoration: none;
+  font-weight: 800;
+}
+
+.very-dark-cyan {
   color: hsl(184, 100%, 22%);
 }
 
 .dark-cyan {
+  color: hsl(179, 100%, 13%);
 }
 
-@media (max-width: 750px) {
+.bright-orange {
+  color: hsl(31, 77%, 52%);
+}
+
+@media (max-width: 900px) {
   .grid-column-component {
     flex-direction: column;
-    max-width: 375px;
+    max-width: 500px;
+  }
+  body {
+    // height: fit-content;
+    // padding: 4rem 0;
+  }
+  .grid-column-component {
+    // flex-direction: column;
+    // max-width: 500px;
+  }
+
+  .section-content {
+    //   height: 700px;
+  }
+}
+
+@media (min-width: 901px) {
+  .grid-column-component {
+    // flex-direction: column;
+    // max-width: 500px;
+  }
+  body {
+    height: 100vh;
+  }
+
+  .section-content {
+    //   height: 700px;
   }
 }
